Changed the width of the loader.

--- a/templates/input-text.html
+++ b/templates/input-text.html
@@ -36,7 +36,7 @@
 			// Disable submit button
 			$('#ask-button').attr('disabled', true)
 			$('#ask-button').html('Generating answer...')
-			$('#result').html('<img src="/static/loading.gif" />')
+			$('#result').html('<img width="100%" src="/static/loading.gif" />')
 		}
 		function enableAskButton() {
 			// Disable submit button
